--- a/relation/src/main/resources/application.properties
+++ b/relation/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-
+spring.datasource.url=jdbc:mysql://localhost:3308/relationjpa
+spring.datasource.username=root
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.hibernate.ddl-auto=none
+logging.level.org.org.hibernate.sql=debug
