--- a/relation/src/main/resources/application.properties
+++ b/relation/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.ddl-auto=none
 logging.level.org.org.hibernate.sql=debug
+spring.jpa.generate-ddl=true
+spring.jpa.show-sql=true
